@@ -227,6 +227,12 @@ Note that the current satoshi client has a "feature" that causes it to refuse co
 <td> 100000</td>
 <td class="cfg_info"> Maximum size of a transaction that will be routed to other peers.</td>
 </tr>
+<tr class="odd">
+<td class="cfg_name"> TXRoute.MemInputs</td>
+<td class="cfg_type"> bool</td>
+<td> false</td>
+<td class="cfg_info"> Route transactions which spend unconfirmed inputs.</td>
+</tr>
 
 <tr class="even">
 <td class="cfg_name"> Memory.GCPercTrshold</td>
