@@ -37,6 +37,7 @@ NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 alread
 * Client: Improved the timing of aborting UTXO saving, resulting in faster processing of new blocks
 * Client: If BlockDB does not find a .dat file, it will try to look again for it in "oldat/" folder (make it a link to keep old blocks on different drive)
 * Client/WebUI/Network: Improved bandwidth usage chart
+* Client: New config value "TXRoute.MemInputs", enables routing of transactions which spend unconfirmed inputs
 
 1.9.3 - 2017-12-26
 * Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
